overflow problem solved

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -275,6 +275,31 @@
   flex-direction: column;
   justify-content: space-between;
 }
+
+/* overlay special for 40% black */
+.overlay-container {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay-container img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.black-overlay {
+  position: absolute;
+  border-radius: 14px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  pointer-events: none;
+  z-index: 1;
+}
+
 .bloom-plant {
   position: relative;
 }
@@ -282,11 +307,12 @@
   position: absolute;
   top: 100px;
   left: 200px;
-  width: max-content; /* prevent shrinking */
-  white-space: nowrap; /* keep text in one line */
+  width: max-content;
+  white-space: nowrap;
   text-align: center;
   transform: translate(-50%, -50%);
   color: white;
+  z-index: 2;
 }
 .bloom-button,
 .ana-button,
@@ -317,6 +343,7 @@
   white-space: nowrap; /* keep text in one line */
   text-align: center;
   transform: translate(-50%, -50%);
+  z-index: 2;
 }
 
 .ana-plant-name {
@@ -343,6 +370,7 @@
   white-space: nowrap; /* keep text in one line */
   text-align: center;
   transform: translate(-50%, -50%);
+  z-index: 2;
 }
 
 .zabo-plant-name {
@@ -360,7 +388,10 @@
 .rightside-image {
   width: 753px;
   height: 423px;
+  overflow: hidden;
+  border-radius: 14px;
 }
+
 
 /* Down-banner */
 .down-banner {
@@ -425,7 +456,7 @@
 
 .footer-main {
   margin: 0px auto;
-  
+
   max-width: 1440px;
   height: 348px;
   align-items: center;
@@ -496,5 +527,6 @@
   width: 36px;
   height: 36px;
 }
-. @media screen and(max-width:576px) {
+
+@media screen and(max-width:576px) {
 }
